--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>奶酪清单</title>
+<title>神器每日推送·资源清单</title>
 
 <style type="text/css">
 	
@@ -158,7 +158,7 @@ a,a:hover { text-decoration:none;}
 	  <div class="tab-group">
 		<section id="tab1" title="A - 人工智能">
 
-<p style="text-align: center; padding-top: 2em;margin-bottom:3em;"><span style="font-size: 16px;"><strong>人工智能指南</strong> - <a href="https://github.com/runningcheese/Awesome-ChatGPT" rel="noopener noreferrer" target="_blank">详细  <img class="ico" src="https://www.runningcheese.com/icons/open.svg"></a></span></p>
+<p style="text-align: center; padding-top: 2em;margin-bottom:3em;"><span style="font-size: 16px;"><strong>人工智能指南</strong> - <a href="https://tsq360.cf/Awesome-ChatGPT" rel="noopener noreferrer" target="_blank">详细  <img class="ico" src="https://www.runningcheese.com/icons/open.svg"></a></span></p>
 
 <table>
 <thead>
@@ -210,7 +210,7 @@ a,a:hover { text-decoration:none;}
 </tr>
 <tr>
 <td>💬 完整内容</td>
-<td>关注 <a class="boxer" href="https://www.runningcheese.com/qrcode.jpg" target="_blank">奶酪公众号</a>，回复关键字 <strong><font color="#0079ff">2</font></strong>，即可一键获取公众号所有资源。</td>
+<td>关注 <a class="boxer" href="https://www.runningcheese.com/qrcode.jpg" target="_blank">公众号：神器每日推送</a>，回复关键字 <strong><font color="#0079ff">2</font></strong>，即可一键获取公众号所有资源。</td>
 </tr>
 </tbody>
 </table>
